--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calculator",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -11,7 +11,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0"
+    "vue-class-component": "^8.0.0-0",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
@@ -65,6 +66,9 @@
     "not ie 11"
   ],
   "jest": {
-    "preset": "@vue/cli-plugin-unit-jest/presets/typescript-and-babel"
+    "preset": "@vue/cli-plugin-unit-jest/presets/typescript-and-babel",
+    "moduleNameMapper": {
+      "\\.svg$": "<rootDir>/__mocks__/fileMock.js"
+    }
   }
 }
